style: pull video grid up over the hero image to ensure visibility on widescreen displays

--- a/src/pages/Films.css
+++ b/src/pages/Films.css
@@ -191,7 +191,7 @@
 .showcase-row-section {
   position: relative;
   z-index: 10;
-  margin-top: -5vh;
+  margin-top: -15vh;
   padding-left: 4vw;
 }
 
